# snow2gcp

./: .env.example  README.md  main.py  pyproject.toml  settings.py  streamlit_app.py
snow2gcp/: settings.py  snow2gcp.py  snowflake_utils.py
snow2gcp/utils/: snowflake.py
