[project]
name = "snow2gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-storage>=3.1.0",
    "polars>=1.30.0",
    "pydantic-settings>=2.9.1",
    "snowflake>=1.5.1",
    "tqdm>=4.67.1",
]
